[package]
name = "nwnrs-vscode-native"
version = "0.0.1"
edition.workspace = true
publish = false
license.workspace = true
description = "In-process Node.js binding for nwnrs Visual Studio Code tooling"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
nwnrs = { path = "../nwnrs", default-features = false, features = ["tooling"] }
nwnrs-nwscript = { path = "../nwscript" }
nwnrs-nwpkg = { path = "../nwpkg" }
nwnrs-types = { path = "../types" }
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[build-dependencies]
napi-build = "2"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
